[gd_scene load_steps=7 format=3 uid="uid://ptr2nelowubu"]

[ext_resource type="Theme" uid="uid://dwaenijqjyg8s" path="res://ui/theme_default/theme_default.tres" id="1_dfjmk"]
[ext_resource type="Script" path="res://menus/story_letter/story_letter.gd" id="2_uh7rp"]
[ext_resource type="PackedScene" uid="uid://b7cltg7tl1qf4" path="res://menus/common/paper_gui.tscn" id="3_7h3t4"]

[sub_resource type="Animation" id="Animation_p6v2t"]
resource_name = "Spin_In"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/AcceptancePaper:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/AcceptancePaper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/AcceptancePaper:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.28319, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/BodyLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1200, 160), Vector2(490, 156)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control/BodyLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Control/TitleLabel:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-296, 105), Vector2(480, 110)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Control/TitleLabel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Control/OkButton:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Control/OkButton:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.9, 1.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ur2wp"]
_data = {
"Spin_In": SubResource("Animation_p6v2t")
}

[sub_resource type="LabelSettings" id="LabelSettings_5vcrf"]
line_spacing = -3.0
font_size = 33
font_color = Color(0.784314, 0, 0, 1)

[node name="StoryLetter" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dfjmk")
script = ExtResource("2_uh7rp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_dfjmk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control"]
unique_name_in_owner = true
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_ur2wp")
}

[node name="AcceptancePaper" parent="CanvasLayer/Control" instance=ExtResource("3_7h3t4")]
offset_left = 581.0
offset_top = 299.0
offset_right = 621.0
offset_bottom = 339.0
scale = Vector2(2, 2)

[node name="BodyLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 490.0
offset_top = 156.0
offset_right = 700.0
offset_bottom = 375.0
theme_override_colors/font_color = Color(0.784314, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "TEST
test
TeSt
Bruh
Chad
Nuts
Deez
AAAAA aAAAaAA aAAa aAAA AAAAA aAAAA
"
label_settings = SubResource("LabelSettings_5vcrf")
autowrap_mode = 3

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 480.0
offset_top = 110.0
offset_right = 705.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(0.784314, 0, 0, 1)
text = "NEXT CLASS"
horizontal_alignment = 1

[node name="OkButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 563.0
offset_top = 396.0
offset_right = 616.0
offset_bottom = 444.0
theme_override_colors/font_color = Color(0.784314, 0, 0, 1)
text = "OK"

[connection signal="pressed" from="CanvasLayer/Control/OkButton" to="." method="_on_degree_accept_button_pressed"]
